--- a/settings.json
+++ b/settings.json
@@ -3,8 +3,8 @@
 "autoplaymusic": true,
 "autocomposing": true,
 "autorecording": true,
-"NamaBot":"AnisaaChann🎋",
-"NomorOwner":"6282138919347",
-"NamaOwner":"Helga",
+"NamaBot":"CacaChann🎋",
+"NomorOwner":"6281262411188",
+"NamaOwner":"xynta ganzz",
 "HunterApi":"Ikyy69"
 }
